# mm

./: .gitignore  MouseMover.spec  README.md  build.sh  main.py  pyproject.toml  requirements.txt  run.py
.github/workflows/: README.md  build-and-release.yml  test-build.yml
src/mm/: __init__.py  __main__.py  config.py  gui.py  idle_detector.py  keyboard_macro.py  logger.py  main.py  mouse_controller.py  singleton.py  system_tray.py
src/mm/resources/: icon.icns
